[package]
name = "daily-dose"
version = "0.1.0"
authors = ["Hayley Sparham <5777950+PartlyAwesome@users.noreply.github.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive", "env"] }
env = "0.1.0"
serenity = "0.12.4"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
chrono = "0.4.38"
rand = "0.8.5"
clokwerk = "0.4.0"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
itertools = "0.13.0"
